@@ -1,3 +1,8 @@
+2017-01-23: 1.4.4:
+------------------
+  * Set CONDA_PREFIX environment variable in cwp.py, fix PATH
+
+
 2017-01-19: 1.4.3:
 ------------------
   * fix fallback to user-mode shortcut if elevation denied, #39
